# konan-cli

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: quality.yaml  release.yaml
.models/: server.py
.templates/python/: Dockerfile  predict.py  requirements.txt  retrain.sh  server.py
konan_cli/: constants.py  main.py  utils.py
konan_cli/.templates/python/: Dockerfile  predict.py  requirements.txt  retrain.py  server.py
